# vocab_ai_assistant

./: .devcontainer.json  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Gemini.md  README.md  cli.py  pyproject.toml
.github/workflows/: deploy.yml
src/vocab_llm_bot/: bot.py  config.py  database.py  google_dict_file.py  llm.py  models.py  training_strategies.py
src/vocab_llm_bot/handlers/: __init__.py  learning.py  setup.py  vocabulary.py
test/: conftest.py  mocks.py  test_dict_file.py  test_dict_file_add.py  test_handlers_setup.py  test_handlers_vocabulary.py  test_learning.py  test_llm.py  test_training_strategies.py
tests/: mocks.py  test_dict_file.py  test_learning.py
vocab_llm_bot/: app.py  bot.py  config.py  database.py  dict_file.py  google_dict_file.py  google_file_pikle.html  models.py  server.py  training_strategies.py
vocab_llm_bot/handlers/: learning.py  setup.py
vocab_llm_webapp/: package-lock.json  package.json
vocab_llm_webapp/src/: app.css  entry-server.tsx
vocab_llm_webapp/src/components/: Nav.tsx
vocab_llm_webapp/src/routes/: [...404].tsx  auth.tsx  index.tsx  settings.tsx
